--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html"> <img src="mbd.jpg" height="100" width="100" alt="" srcset=""><b>MBD-Filling Station</b></a>
+          <a class="navbar-brand" href="/MBDfilling/"> <img src="mbd.jpg" height="100" width="100" alt="" srcset=""><b>MBD-Filling Station</b></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="/MBDfilling/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/scheme.html">Scheme</a>
