--- a/querry.html
+++ b/querry.html
@@ -17,16 +17,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="/MBDfilling/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/scheme.html">Scheme</a>
+                <a class="nav-link" href="/MBDfilling/scheme.html">Scheme</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/about.html">About Us</a>
+                <a class="nav-link" href="/MBDfilling/about.html">About Us</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/querry.html">Any Querry!</a>
+                <a class="nav-link" href="/MBDfilling/querry.html">Any Querry!</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
