--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="carousel-item active">
         <img src="carsol.jpg" height="600" width="250" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h1>Welcome To MBD-Filling Station</h1>
+          <h1>Welcome To Maa Bhagwati Devi Filling Station</h1>
           <h3>Nayara Energy Petrol Pump</h3>
 <button class="btn btn-success">Petrol</button>   
 <button class="btn btn-primary">Diesel</button>   
