--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MBD-Filling Station</title>
+    <title>Maa Bhagwati Devi Filling Station</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
@@ -50,7 +50,6 @@
         <img src="carsol.jpg" height="600" width="250" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h1>Welcome To Maa Bhagwati Devi Filling Station</h1>
-          <h3>Nayara Energy Petrol Pump</h3>
 <button class="btn btn-success">Petrol</button>   
 <button class="btn btn-primary">Diesel</button>   
 <button class="btn btn-secondary">Lubriacnt</button>   
