--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h1>Welcome To Maa Bhagwati Devi Filling Station</h1>
 <button class="btn btn-success">Petrol</button>   
 <button class="btn btn-primary">Diesel</button>   
-<button class="btn btn-secondary">Lubriacnt</button>   
+<button class="btn btn-secondary">Lubricant</button>   
         </div>
       </div>
       <div class="carousel-item">
